[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
ndarray = "0.15.4"
phf = { version = "0.10.0", features = ["macros"] }
strum = "0.23.0"
strum_macros = "0.23.1"
