[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22.3"
colored = "2"
graphlib = "0.6.3"
hex = "0.4.3"
ndarray = "0.15.4"
pathfinding = "3.0.5"
phf = { version = "0.10.0", features = ["macros"] }
rand = "0.8.4"
strum = "0.23.0"
strum_macros = "0.23.1"
